<resources>
    <string name="app_name">News</string>

    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_news_list">News</string>
    <string name="title_activity_news_detail">NewsDetail</string>
    <string name="title_activity_news_channel">NewsChannel</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_about_us">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_news_list">News</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="tab_internet">Internet</string>
    <string name="tab_tech">Tech</string>
    <string name="tab_finance">Finance</string>
    <string name="tab_education">Education</string>

    <string name="exception_message_generic">Application Error</string>
    <string name="exception_message_no_connection">No Network Connection</string>

    <string name="iv_content_description">Img</string>

    <string name="btn_retry">Retry</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_done">Done</string>

    <string name="tv_loading">Loading&#8230;</string>
    <string name="tv_no_more_data">No more data</string>
    <string name="tv_news">News</string>
    <string name="tv_my_channel">Channel</string>
    <string name="tv_channel_recommended">Channel Recommended</string>

    <array name="tab_text_array">
        <item>Internet</item>
        <item>Tech</item>
        <item>Finance</item>
        <item>Education</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_loading_error">Loading Error</string>

</resources>
