<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/content"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_list"
            android:checked="true"
            android:icon="@drawable/ic_story_list"
            android:orderInCategory="0"
            android:title="@string/nav_story_list"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:orderInCategory="1"
            android:title="@string/nav_feedback"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:orderInCategory="1"
            android:title="@string/nav_about"/>
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="1"
            android:title="@string/nav_settings"/>
    </group>

</menu>
